@@ -1,3 +1,4 @@
+2023-08-10: Fix CMake debug build with MSVC, fixes #46
 2023-07-11: Clean up unused value
 2023-07-11: Fix clang warning about missing function prototypes (-Wstrict-prototypes)
 2023-02-21: Update Xcode project settings
